Corrected code for left shift of hover item

--- a/components/top-nav/src/top-nav-hover.module.scss
+++ b/components/top-nav/src/top-nav-hover.module.scss
@@ -2,7 +2,7 @@
 
 .hover-item {
   position: absolute;
-  z-index: 1;
+  z-index: 6;
   padding: size('8x') size('6x');
   background-color: color('white');
   box-shadow: shadow('topnav-hover');
